Make generic DOM datanodes implement GetBindingParent in a semi-useful way so that event retargeting works (bug 97634, bug 183878).  Also remove some code that's no longer needed now that we have retargeting.  r=bryner, sr=jst